# woofx3-ui

./: .gitignore  AGENTS.md  CLAUDE.md  SPEC.md  biome.json  bun.lockb  design_guidelines.md  devbox.json  module-improvements-spec.md  package-lock.json  package.json  replit.md  tsconfig.json  vite.config.ts
.claude/: settings.local.json
.sisyphus/plans/: engine-communication-prd.md  module-connection-architecture.md
.sisyphus/run-continuation/: ses_1d0f42a25ffe2F53OQCvv07UcF.json  (+3 more)
attached_assets/: Pasted--3CmxGraphModel-3E-3Croot-3E-3CmxCell-20id-3D-220-22-2F_1768270774682.txt
client/: index.html
convex/: accountMembers.ts  accounts.ts  actionDefinitions.ts  alertDescriptors.ts  alertLog.ts  assets.ts  auth.ts  browserSource.ts  chatCommands.ts  crons.ts  dashboardLayouts.ts  debug.ts  engineAlerts.ts  engineHealth.ts  engineSync.ts  engineSyncInternal.ts  folders.ts  http.ts  installedModules.ts  instanceLiveState.ts  instances.ts  invitations.ts  logger.ts  marketplace.ts  moduleAssets.ts  moduleEngine.ts  moduleFunctions.ts  moduleRepository.ts  moduleResourceInstances.ts  moduleWebhook.ts  moduleWidgets.ts  obsCommands.ts  obsSceneConfigs.ts  registration.ts  sceneSlots.ts  scenes.ts  schema.ts  storage.ts  streamStatus.ts  transientEvents.ts  (+12 more)
docs/: index.md  package.json
script/: agent-client.ts  agent-relay.ts  build.ts  generate-auth-keys.ts  local-storage-server.ts  send-message.ts
scripts/: link-sdk.sh
server/: api-server.ts  routes.ts  ws-adapter.ts
shared/: api.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
(+133 files in other folders)
