[package]
name = "woofx3-ui"
version = "0.1.0"
description = "woofx3 Streaming Control Plane — Desktop App"
authors = []
edition = "2021"

[lib]
name = "woofx3_ui_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "woofx3-ui"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true
